# Alawyer

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
Alawyer/: Package.swift
Alawyer/Sources/App/: AlawyerApp.swift
Alawyer/Sources/Models/: CoreEvent.swift  Message.swift  Session.swift
Alawyer/Sources/Services/: CoreBridge.swift  KeychainService.swift
Alawyer/Sources/Support/SeedKB/: NOTICE.md
Alawyer/Sources/Support/SeedKB/labor/: 00_适用场景与时效.md  01_劳动仲裁流程.md  02_证据材料清单.md  03_常见请求事项.md  04_法律依据速查.md
Alawyer/Sources/ViewModels/: ChatViewModel.swift  SessionViewModel.swift  SettingsViewModel.swift
Alawyer/Sources/Views/Chat/: ApprovalCard.swift  ChatView.swift  InputView.swift  IntakeProgressView.swift  MessageRow.swift
Alawyer/Sources/Views/Onboarding/: OnboardingView.swift
Alawyer/Sources/Views/Report/: ReportView.swift
Alawyer/Sources/Views/Session/: EmptyStateView.swift  SessionListView.swift  SessionRow.swift
Alawyer/Sources/Views/Settings/: AboutSettingsView.swift  ModelSettingsView.swift  PermissionSettingsView.swift  SettingsView.swift
Alawyer/Tests/: AlawyerTests.swift
alawyer-core/: Cargo.toml
alawyer-core/data/: custom_dict.txt
alawyer-core/src/: error.rs  lib.rs
alawyer-core/src/agent/: mod.rs
alawyer-core/src/model/: connector.rs  mod.rs
alawyer-core/src/retrieval/: mod.rs
alawyer-core/src/safety/: mod.rs
alawyer-core/src/storage/: mod.rs  sqlite.rs
alawyer-core/src/tools/: mod.rs
scripts/: generate_swift_bindings.sh
