[package]
name = "alawyer-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "alawyer_core"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["bindgen-cli"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jieba-rs = "0.7"
once_cell = "1.21"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.22"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tracing = "0.1"
uniffi = "0.28"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3.15"

[features]
default = []
bindgen-cli = ["uniffi/cli"]

# Optimize heavy dependencies even in debug/test builds.
# jieba-rs dictionary loading + tantivy indexing are unusable without -O.
[profile.dev.package.jieba-rs]
opt-level = 2

[profile.dev.package.include-flate]
opt-level = 2

[profile.dev.package.include-flate-codegen]
opt-level = 2

[profile.dev.package.include-flate-compress]
opt-level = 2

[profile.dev.package.tantivy]
opt-level = 2

[profile.dev.package.tantivy-fst]
opt-level = 2
